src/log/combned.metagpu5.3280936.err
  File "main.py", line 18
    from darts-bohamiann import BohamiannWorker
              ^
SyntaxError: invalid syntax
